cloud-hypervisor: support incremental backup and sysctl
